# klint

./: .gitignore  CMakeLists.txt  LICENSE  README.md  format.sh
src/: cli.cpp  cli.hpp  color.hpp  critical_kernel_patterns.hpp  kcore_reader.cpp  kcore_reader.hpp  main.cpp  output.cpp  output.hpp  result.hpp  scanner.hpp  util.cpp  util.hpp
src/scanners/: bpf_rootkit_detection.cpp  ftrace_redirection.cpp  hidden_lkm.cpp  hidden_network_sockets.cpp  hidden_processes.cpp  kernel_entrypoint_integrity.cpp  syscall_table_integrity.cpp  unknown_kprobes.cpp
